Updated section one bottom

--- a/index.html
+++ b/index.html
@@ -18,15 +18,28 @@
         <li>header link three</li>
       </ul>
     </div>
-    <div class="hero">
-      <h1>This website is awesome</h1>
-      <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-    <div class="hero-image">
-      <img src="https://images.unsplash.com/photo-1679487660365-34c266635f56?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-        alt="image of mountains and sunset">
+
+    <div class="sectionOneBottom">
+      <div class="sectionOneBottomCol">
+        <div class="hero">
+          <h1 class="hero-text">This website is <br>
+            awesome <br>
+          </h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+          <button class="hero-button">Sign Up</button>
+        </div>
+      </div>
+
+      <div class="sectionOneBottomCol">
+        <div class="hero-image">
+          <img src="https://images.unsplash.com/photo-1679487660365-34c266635f56?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+            alt="image of mountains and sunset">
+        </div>
+      </div>
     </div>
+
+
     </div>
-  </div>
 
 </body>
 </html>
