Update section 1 image

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div class="sectionOneBottom">
       <div class="sectionOneBottomCol">
         <div class="hero">
-          <h1 class="hero-text">This website is <br>
+          <h1 class="hero-title">This website is <br>
             awesome <br>
           </h1>
-          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+          <p class="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
           <button class="hero-button">Sign Up</button>
         </div>
       </div>
